# llmzoomcamp-capstone

./: .gitignore  Readme.md  combine_data.py  docker-compose.yml  pyproject.toml  railway.toml  vercel.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  ollama.Dockerfile  ollama_start.sh
backend/: Dockerfile  README.md  app.py  auth.py  client.py  dependencies.py  engines.py  env.py  evaluate_rag.py  evaluate_search.py  gemma3:1b_offline_rag_cos_sim.csv  gpt-4o-mini_offline_rag_cos_sim.csv  mini_wiki.csv  models.py  prompts.py  utils.py
backend/grafana/dashboards/: dashboard.json
backend/grafana/datasources/: datasources.yml
frontend/: Dockerfile  README.md  package.json
frontend/src/app/: globals.css  layout.js  page.js  page.module.css
frontend/src/app/chat/: page.js
frontend/src/app/chat/[conv_id]/: page.js
frontend/src/components/: ActiveChat.jsx  ChatMessage.jsx  History.jsx  HistoryBtn.jsx
frontend/src/components/pages/: ChatPage.jsx
frontend/src/lib/: config.js
frontend/src/styles/: activechat.module.css  chatmsg.module.css  history.module.css  historybtn.module.css
frontend/src/styles/pages/: chat.module.css
