[project]
package-mode = false
name = "llmzmcp"
version = "0.1.0"
description = "LLM ops zoomcamp 25"
authors = [
    {name = "Joses"}
]
license = {text = "MIT"}
readme = "README.md"

requires-python = ">=3.10,<4.0"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "openai (>=1.88.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "minsearch (==0.0.4)",
    "rouge (>=1.0.1,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "slowapi (>=0.1.9,<0.2.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
transformers = ">=4.52.4,<5.0.0"
torch = ">=2.7.1,<3.0.0"
sentence-transformers = ">=5.0.0,<6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
